# gigbot

./: .gitignore  docker-compose.yml  dockerfile  makefile  pyproject.toml  readme.md  requirements.txt  requirements_local.txt
src/dynamicalsystem/gigbot/: commands.py  config.py  envelopes.py  loggers.py  main.py  signalbot.py  storage.py  utils.py
